--- a/index.html
+++ b/index.html
@@ -2557,11 +2557,16 @@ of Electronics Engineering and Computer Science, Peking University.
 recruiting  Ph.D.s who <b style="mso-bidi-font-weight: normal;"><u>have    
 strong mathematical abilities</u></b> (however, this does not imply that you  
 have to come from mathematics department) and <u><strong>great interest in 
-theoretical analysis</strong></u><strong></strong> in order to enjoy with me how 
-to use  mathematics to solve real problems elegantly. I am also recruiting 
-Masters who have <b style="mso-bidi-font-weight: normal;"><u> strong coding 
-skills</u></b> and interests in Quantitative Trading (<a href="https://zhouchenlin.github.io/%E9%87%8F%E5%8C%96%E6%8A%95%E8%B5%84%E2%80%94%E2%80%94%E7%AD%96%E7%95%A5%E4%B8%8E%E6%8A%80%E6%9C%AF.pdf">a 
-reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span> (dot) edu (dot) cn) your detailed resume!   <o:p></o:p> 
+theoretical analysis</strong></u> in order to enjoy with me how 
+to use  mathematics to solve real problems elegantly. Two reference books (downloadable from http://gen.lib.rus.ec/)： </span></p>
+<p>1.	Foundations of Machine Learning, 2nd Edition.  You may skip chapters 14 &amp; 16.<br>
+  2.	First-Order and Stochastic Optimization Methods for Machine Learning<span style="font-family: &quot;Verdana&quot;, &quot;sans-serif&quot;">.</span></p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> I am also recruiting 
+  Masters who have <b style="mso-bidi-font-weight: normal;"><u> strong coding 
+    skills</u></b> and interests in Quantitative Trading (<a href="https://zhouchenlin.github.io/%E9%87%8F%E5%8C%96%E6%8A%95%E8%B5%84%E2%80%94%E2%80%94%E7%AD%96%E7%95%A5%E4%B8%8E%E6%8A%80%E6%9C%AF.pdf">a 
+      reference book</a>). </span></p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Welcome to send me (zlin (at) <span class="GramE">pku</span> (dot) edu (dot) cn) your detailed resume!   
+  <o:p></o:p> 
 </span></p>
 <table width="613" border="1" cellpadding="0">
   <tbody>
@@ -4215,27 +4220,34 @@ Committee, China Association of Automation.</span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">9. Standing 
 Member of Computer Vision Professional Committee, China Computer Federation. 
 </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">10. Adjunct 
-Professor of Chinese University of Hong Kong (Shenzhen).</span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">11. Chair  
-Professor of Northeast Normal University.     <o:p></o:p> </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">12. Guest
- Professor of Shanghai Jiaotong University.   <o:p></o:p></span></p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">10. Standing 
+Member of Pattern Recognition Professional Committee, China Association of Artificial Intelligence. </span></p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">11. Adjunct 
+  Professor of Chinese University of Hong Kong (Shenzhen).</span></p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">12. Chair  
+  Professor of Northeast Normal University.     
+    <o:p></o:p> </span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">13. Guest
- Researcher of Institute of Computing Technologies, Chinese Academy of Sciences. 
+ Professor of Shanghai Jiaotong University.   
     <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">14. Guest
- Professor of Southeast University.   <o:p></o:p></span></p>
+ Researcher of Institute of Computing Technologies, Chinese Academy of Sciences. 
+    <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">15. Guest
+ Professor of Southeast University.   
+    <o:p></o:p></span></p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">16. Guest
  Professor and Ph.D. Supervisor of Beijing Jiaotong University.   
-<o:p></o:p></span></p>
-<p>16. Technical Advisory Board of Guangdong Key Lab. of Machine Vision and 
+    <o:p></o:p></span></p>
+<p>17. Technical Advisory Board of Guangdong Key Lab. of Machine Vision and 
 Virtual Reality. </p>
-<p>17.  Technical Advisory Board of Key Lab. of Machine Vision and Pattern 
+<p>18.  Technical Advisory Board of Key Lab. of Machine Vision and Pattern 
 Recognition,  Institute of Advanced Technology, Chinese Academy of Sciences, 
 Shenzhen.</p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">18. Reviewer 
-to Journals:    <o:p></o:p></span></p>
+<p>19. Technical Advisory Board of Guangdong Lab. of Artificial Intelligence and Digital Economy (Pazhou Lab.).</p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">20. Reviewer 
+to Journals:    
+    <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">IEEE Trans.
  Pattern Analysis and Machine Intelligence, International Journal of Computer
  Vision, IEEE Trans. Information Theory, IEEE Journal of Selected Topics in 
@@ -4250,8 +4262,9 @@ Processing Letters, The Visual Computer, Computer Vision and Image
 Understanding, Multimedia Systems Journal, Machine Vision and Applications, 
 Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">中国科学</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">(E</span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">辑</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">) [Science in China
  (Series E)] <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. 
-Reviewers/Chairs to Conferences:   <o:p></o:p></span></p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">21. 
+Reviewers/Chairs to Conferences:   
+    <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
 2020 (<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
@@ -4289,7 +4302,7 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, Int’l
  Conf. Computer Vision 2001, Pacific Graphics 2001 
  <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">20. 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">22. 
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>     
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
@@ -4328,6 +4341,8 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>13. Gaopeng Jian, PostDoc in 2019.</p>
 <p>14. Huan Li, Cong Fang, and Jian Long Wu, Ph.D. in 2019.</p>
 <p>15. Zhisheng Zhong, Han Yan, Yu Xia, and Ming Yin, Master in 2019.</p>
+<p>16. Xia Li, Hongyang Li, Tiancheng Shen, and Fengcai Li, Master in 2020.</p>
+<p>17. Jia Li, PostDoc in 2020.</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Keynote 
   Speeches:<o:p></o:p></span></u></b></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1. Low Rank
