--- a/index.html
+++ b/index.html
@@ -2841,7 +2841,7 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">120. Risheng Liu,  Zhu Liu, Pan Mu, <u>Zhouchen Lin</u>, Xin Fan, Zhongxuan Luo, <em>Investigating Image Propagations from Optimization Perspective: Modules, Control Mechanisms and Applications</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">119. Huan Li, Cong Fang, Wotao Yin, and <u>Zhouchen Lin</u>, <em>A Sharp Convergence Rate Analysis for Distributed Accelerated Gradient</em>, submitted to IEEE Transactions on Signal Processing.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">119. Huan Li, Cong Fang, Wotao Yin, and <u>Zhouchen Lin</u>, <em>Decentralized Accelerated Gradient Methods With Increasing Penalty Parameters</em>, submitted to IEEE Transactions on Signal Processing, major revision.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">118. Tiancheng Shen, Yibo Yang, <u>Zhouchen Lin</u>, Mingbin Zhang, <em>Recurrent Learning with Clique Structures for Prostate Sparse-view CT Artifacts Reduction</em>, submitted to IET Image Processing. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4654,7 +4654,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on July 4, 2020. Number of visitors since March 1, 2010:     
+was last updated on July 6, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
