--- a/index.html
+++ b/index.html
@@ -2901,7 +2901,7 @@ Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal1231175" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">103. Canyi Lu, 
   Jiashi Feng, Yudong Chen, Wei Liu, <u>Zhouchen Lin</u>, <span class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">and</span> Shuicheng Yan, <em>Tensor Robust Principal Component Analysis with A 
     New Tensor Nuclear Norm</em>, IEEE Trans. Pattern Analysis and Machine 
-  Intelligence, 42(4): 925-938 (2020). [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-TRPCA.pdf">pdf</a>]</span></p>
+  Intelligence, 42(4): 925-938 (2020). [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-TRPCA.pdf">pdf</a>](ESI hot paper/ESI Highly cited paper)</span></p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">102. Huan Li and <u>Zhouchen Lin</u>, <em>On 
   the Complexity Analysis of the Primal Solutions for the Accelerated Randomized 
