--- a/index.html
+++ b/index.html
@@ -2552,7 +2552,7 @@ to Zhouchen Lin's Homepage!</span></b></span><span lang="EN-US" style="font-fami
 <b>Zhouchen Lin</b> is a Professor in Department of Machine Intelligence, School 
 of Electronics Engineering and Computer Science, Peking University.  
 <o:p></o:p>
-</span>I am leading the <a href="https://zero-lab-pku.github.io/">ZERO Lab at Peking University</a>.</p>
+</span>I am leading the <a href="https://zero-lab-pku.github.io/">ZERO Lab at Peking University</a> (<a href="Things ZERO Lab Students Ought to Know.htm">Things ZERO Lab Students Ought to Know</a>).</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">I am now 
 recruiting  Ph.D.s who <b style="mso-bidi-font-weight: normal;"><u>have    
 strong mathematical abilities</u></b> (however, this does not imply that you  
@@ -2560,13 +2560,13 @@ have to come from mathematics department) and <u><strong>great interest in
 theoretical analysis</strong></u> in order to enjoy with me how 
 to use  mathematics to solve real problems elegantly. Reference books (downloadable from http://gen.lib.rus.ec/)： </span></p>
 <p>1.	Foundations of Machine Learning, 2nd Edition.  You may skip chapters 14 &amp; 16.<br>
-  2.	First-Order and Stochastic Optimization Methods for Machine Learning<span style="font-family: &quot;Verdana&quot;, &quot;sans-serif&quot;">.</span> (Or a simpler one: First-order Methods in Optimization)</p>
+  2.	First-order Methods in Optimization.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> I am also recruiting 
   Masters who have <b style="mso-bidi-font-weight: normal;"><u> strong coding 
     skills</u></b> and interests in Quantitative Trading (<a href="https://zhouchenlin.github.io/%E9%87%8F%E5%8C%96%E6%8A%95%E8%B5%84%E2%80%94%E2%80%94%E7%AD%96%E7%95%A5%E4%B8%8E%E6%8A%80%E6%9C%AF.pdf">a 
       reference book</a>). </span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Welcome to send me (zlin (at) <span class="GramE">pku</span> (dot) edu (dot) cn) your detailed resume!   
-  <o:p></o:p> 
+  <o:p></o:p>
 </span></p>
 <table width="613" border="1" cellpadding="0">
   <tbody>
