--- a/Things ZERO Lab Students Ought to Know.htm
+++ b/Things ZERO Lab Students Ought to Know.htm
@@ -7,16 +7,17 @@
 
 <body>
 <p align="center"><strong>Things ZERO Lab Students Ought to Know</strong></p>
-<p>1. It is YOU who are responsible for your graduation. Prof. Zhouchen Lin, as your supervisor, only helps you to achieve your goal. So you have to be self-motivated. </p>
+<p>1. It is YOU who are responsible for your graduation. Prof. Zhouchen Lin, as your supervisor, only helps you to achieve your goal. So you have to be self-motivated and don't blame me if you cannot get your degree. </p>
 <p>2. You have the obligation to keep the secrets of the on-going research at ZERO Lab. </p>
 <p>3. You can work anywhere. The seats in 2221 are not fixed for some students. They are for frequent comers only. </p>
 <p>4. Unlike other professors, Prof. Lin does not require you to work xxx hours a day or a week, but you have to keep yourself in good conditions (e.g., have regular physical exercise and good personal relationship) so that you can work hard if needed. </p>
-<p>5. Once you have a good idea or a solution, you should realize it as soon as possible, rather than working in a normal pace. Working overnight may be necessary. Otherwise, you will never see the final result or won't be excited when it is ready. </p>
+<p>5. Once you have a good idea or a solution, you should realize it as soon as possible, rather than working in a normal pace. Working overnight may be necessary. Otherwise, you will never see the final result or won't be excited when it is ready. Even worse, others may publish before you. </p>
 <p>6. You may ask me for anything you want, except the answers to research problems (which I usually don't know) and the certificate of your degree (which I don't have the authority). </p>
-<p>7. You must not be an intern of a company without the consent of Prof. Lin. If you are not Prof. Lin's official student, violating this rule means that you leave ZERO lab automatically. </p>
-<p>8. Some materials for paper writing: <a href="https://zhouchenlin.github.io/How to Write Good Papers - V2.pdf">How to write good papers</a>; <a href="https://zhouchenlin.github.io/Check%20List%20before%20Handing%20in%20Your%20Paper.htm">Check 
-List before Handing in Your Paper</a>; <a href="https://zhouchenlin.github.io/How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers.htm">How 
-to Write Good Responses to Reviews of Journal Papers</a>; <a href="https://zhouchenlin.github.io/How%20to%20Have%20a%20Successful%20Graduate%20Life.pdf">How 
-to have a successful graduate life?</a>; <a href="Check List before Handing in Your Thesis.html">Check List before Handing in Your Chinese Thesis</a></p>
+<p>7. Although you have enormous freedom in ZERO lab, you must not misuse it for stuffs unrelated to your assigned work. Especially, you must not be an intern of a company without the consent of Prof. Lin. If you are not Prof. Lin's official student, violating this rule means that you leave ZERO lab automatically. </p>
+<p>8. When submitting papers to conferences or journals, please read the author guideline first. Don't take things for granted. Especially, the author list of a conference paper must be finalized before the deadline of abstract or paper submission. </p>
+<p>9. Some materials for paper writing: <a href="https://zhouchenlin.github.io/How to Write Good Papers - V2.pdf">How to write good papers</a>; <a href="https://zhouchenlin.github.io/Check%20List%20before%20Handing%20in%20Your%20Paper.htm">Check 
+  List before Handing in Your Paper</a>; <a href="https://zhouchenlin.github.io/How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers.htm">How 
+    to Write Good Responses to Reviews of Journal Papers</a>; <a href="https://zhouchenlin.github.io/How%20to%20Have%20a%20Successful%20Graduate%20Life.pdf">How 
+      to have a successful graduate life?</a>; <a href="Check List before Handing in Your Thesis.html">Check List before Handing in Your Chinese Thesis</a></p>
 </body>
 </html>
