--- a/index.html
+++ b/index.html
@@ -4213,7 +4213,7 @@ International Association of Pattern Recognition (IAPR), grade 2017. </p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">4. 
 </span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Associate  Editor of 
 </span>International Journal of Computer Vision. </p>
-<p>5. Associate Editor of Optimization Methods and Software.. </p>
+<p>5. Associate Editor of Optimization Methods and Software.</p>
 <p>6. Executive Editor of Big Data and Information Analytics. </p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">7. Retired Associate  
 Editor of Neurocomputing.     
@@ -4258,8 +4258,8 @@ Shenzhen.</p>
     <o:p></o:p>
 </span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">IEEE Trans.
-  Pattern Analysis and Machine Intelligence, International Journal of Computer
-  Vision, IEEE Trans. Information Theory, IEEE Journal of Selected Topics in 
+  Pattern Analysis and Machine Intelligence (<strong>Former Associate Editor</strong>), International Journal of Computer
+  Vision (<strong>Associate Editor</strong>), IEEE Trans. Information Theory, IEEE Journal of Selected Topics in 
   Signal Processing (<strong>Guest Editor</strong>), J. Machine Learning Research, 
   Mathematical Reviews, IEEE Trans. Image Processing, IEEE Trans. Signal 
   Processing, IEEE Trans. Neural Network, Optimization Letters, IEEE Trans. 
@@ -4270,7 +4270,8 @@ Shenzhen.</p>
   Processing Letters, The Visual Computer, Computer Vision and Image 
   Understanding, Multimedia Systems Journal, Machine Vision and Applications, 
   Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">中国科学</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">(E</span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">辑</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">) [Science in China
-    (Series E)] <o:p></o:p></span></p>
+    (Series E)] 
+  <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">23. 
 Reviewers/Chairs to Conferences:   
     <o:p></o:p></span></p>
