--- a/index.html
+++ b/index.html
@@ -2827,7 +2827,7 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">129. </span>Pan Zhou, Xiaotong Yuan, <u>Zhouchen Lin</u>, and Steven Hoi, <em>A Hybrid Stochastic-Deterministic Minibatch Proximal Gradient Method for Efficient Optimization and Generalization</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">129. Pan Zhou, Xiaotong Yuan, <u>Zhouchen Lin</u>, and Steven Hoi, <em>A Hybrid Stochastic-Deterministic Minibatch Proximal Gradient Method for Efficient Optimization and Generalization</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">128. Shiping Wang, Zhaoliang Chen, Shide Du, and <u>Zhouchen Lin</u>, <em>Learning Deep Sparse Regularizers with Applications to Multi-View Clustering and Semi-Supervised Classification</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
