--- a/index.html
+++ b/index.html
@@ -2827,15 +2827,17 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">131. Huan Li, <u>Zhouchen Lin</u>, and Yongchun Fang,  <em>Optimal Accelerated Variance Reduced EXTRA and DIGing for Strongly Convex and  Smooth Decentralized Optimization</em>, submitted to J. Machine Learning Research.</p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">130. Hanyuan Hang, Tao Huang, Biao Li, and <u>Zhouchen Lin</u>, <em>Histogram Transform Ensembles for Density-based Unsupervised Learning</em>, submitted to J. Machine Learning Research.</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">129. Pan Zhou, Xiaotong Yuan, <u>Zhouchen Lin</u>, and Steven Hoi, <em>A Hybrid Stochastic-Deterministic Minibatch Proximal Gradient Method for Efficient Optimization and Generalization</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">128. Shiping Wang, Zhaoliang Chen, Shide Du, and <u>Zhouchen Lin</u>, <em>Learning Deep Sparse Regularizers with Applications to Multi-View Clustering and Semi-Supervised Classification</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">128. Shiping Wang, Zhaoliang Chen, Shide Du, and <u>Zhouchen Lin</u>, <em>Learning Deep Sparse Regularizers with Applications to Multi-View Clustering and Semi-Supervised Classification</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence, major revision. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">127. Yibo Yang, Zhengyang Shen, Huan Li, and <u>Zhouchen Lin</u>, <em>Optimization-inspired Neural Architecture Design and Search</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span><span class="STYLE12"> </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">126. Xingyu Xie, Jianlong Wu, Guangcan Liu, and <u>Zhouchen Lin</u>, <em>SSCNet: Learning-based Subspace Clustering</em>, submitted to 中国科学. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">125. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: A New Data Dependent Tensor Rank</em>, submitted to IEEE Trans. Neural Networks and Learning Systems.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">125. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, submitted to Machine Learning.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Jianlong Wu, Xingyu Xie, Liqiang Nie, <u>Zhouchen Lin</u>, and Hongbin Zha, <em>Reconstruction Regularized Low-Rank Subspace Learning for Cross-Modal Retrieval</em>, submitted to Pattern Recognition.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3473,6 +3475,8 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">113. 5 paper submitted to ICLR 2021.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">112. 8 paper submitted to AAAI 2021.</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">111. 17 papers submitted to NeurIPS 2020.</span></span></p>
@@ -4204,7 +4208,8 @@ granted)</span></p>
 <p>16. (202010080428.7) 神经网络模型的训练方法和装置[三星]</p>
 <p>17. (202010189225.1) 一种基于偏微分算子的等变卷积网络模型的图像分类方法</p>
 <p>18. (202010244367.3) 基于凸多面体分段线性分类的二叉划分树车牌识别方法[之江]</p>
-<p>19. （202010876709.3） 基于稀疏编码的深度学习网络结构搜索</p>
+<p>19. （202010876709.3） 基于稀疏编码的深度学习网络结构搜索的图像识别方法</p>
+<p>20. （202010960192.6）基于可学习可微分矩阵逆及矩阵分解的图像恢复方法</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   <o:p></o:p> </span></u></b></p>
 <p>1. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
@@ -4232,36 +4237,37 @@ Member of Computer Vision Professional Committee, China Computer Federation.
 </span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">11. Standing 
 Member of Pattern Recognition Professional Committee, China Association of Artificial Intelligence. </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">12. Adjunct 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">12. </span>Ex-Vice President of Samsung Research, leading the AI Lab at Samsung Research China - Beijing. </p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">13. Adjunct 
   Professor of Chinese University of Hong Kong (Shenzhen).</span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">13. Ex-Chair  
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">14. Ex-Chair  
   Professor of Northeast Normal University.     
     <o:p></o:p> </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">14. Ex-Guest
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">15. Ex-Guest
  Professor of Shanghai Jiaotong University.   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">15. Ex-Guest
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">16. Ex-Guest
  Researcher of Institute of Computing Technologies, Chinese Academy of Sciences. 
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">16. Ex-Guest
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">17. Ex-Guest
  Professor of Southeast University.   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">17. Ex-Guest
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">18. Ex-Guest
  Professor and Ph.D. Supervisor of Beijing Jiaotong University.   
     <o:p></o:p></span></p>
-<p>18. Technical Advisory Board of Guangdong Key Lab. of Machine Vision and 
+<p>19. Technical Advisory Board of Guangdong Key Lab. of Machine Vision and 
 Virtual Reality. </p>
-<p>19.  Technical Advisory Board of Key Lab. of Machine Vision and Pattern 
+<p>20.  Technical Advisory Board of Key Lab. of Machine Vision and Pattern 
 Recognition,  Institute of Advanced Technology, Chinese Academy of Sciences, 
 Shenzhen.</p>
-<p>20. Technical Advisory Board of Guangdong Lab. of Artificial Intelligence and Digital Economy (Pazhou Lab.).</p>
-<p>21. Technical Advisory Board of AI School, Nanjing University of Aeronautics and Astronautics.</p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">22. Reviewer 
+<p>21. Technical Advisory Board of Guangdong Lab. of Artificial Intelligence and Digital Economy (Pazhou Lab.).</p>
+<p>22. Technical Advisory Board of AI School, Nanjing University of Aeronautics and Astronautics.</p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">23. Reviewer 
   to Journals:    
     <o:p></o:p>
 </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">IEEE Trans.
-  Pattern Analysis and Machine Intelligence (<strong>Former Associate Editor</strong>), International Journal of Computer
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Machematical Programming, IEEE Trans.
+  Pattern Analysis and Machine Intelligence (<strong>Retired Associate Editor</strong>), International Journal of Computer
   Vision (<strong>Associate Editor</strong>), IEEE Trans. Information Theory, IEEE Journal of Selected Topics in 
   Signal Processing (<strong>Guest Editor</strong>), J. Machine Learning Research, 
   Mathematical Reviews, IEEE Trans. Image Processing, IEEE Trans. Signal 
@@ -4275,7 +4281,7 @@ Shenzhen.</p>
   Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">中国科学</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">(E</span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">辑</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">) [Science in China
     (Series E)] 
   <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">23. 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. 
 Reviewers/Chairs to Conferences:   
     <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  IJCAI 2021 (<strong>Area Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
@@ -4315,7 +4321,7 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, Int’l
  Conf. Computer Vision 2001, Pacific Graphics 2001 
  <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">25. 
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>     
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
@@ -4443,7 +4449,7 @@ to Write Good Papers [<a href="https://zhouchenlin.github.io/How%20to%20write%20
 2</a>]   <o:p></o:p> 
 </span> (<a href="https://zhouchenlin.github.io/Check%20List%20before%20Handing%20in%20Your%20Paper.htm">Check 
 List before Handing in Your Paper</a>) (recommended English editing tool: <a href="http://www.pigai.org/">http://www.pigai.org/</a>) (<a href="https://zhouchenlin.github.io/How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers.htm">How 
-to Write Good Responses to Reviews of Journal Papers</a>) (<a href="https://zhouchenlin.github.io/How%20to%20Have%20a%20Successful%20Graduate%20Life.pdf">How 
+to Write Good Responses to Reviews of Journal Papers</a>) (<a href="https://zhouchenlin.github.io/How to Have a Successful Graduate Life-v2.pdf">How 
 to have a successful graduate life?</a>) (<a href="Check List before Handing in Your Thesis.html">Check List before Handing in Your Chinese Thesis</a>)</p>
 <p><span lang="EN-US" style="color: rgb(166, 166, 166); font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; mso-themecolor: background1; mso-themeshade: 166;">At: 
 Institute of Computing Technologies (Chinese Academy of Sciences) (Apr. 24, 
@@ -4665,7 +4671,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Sept. 9, 2020. Number of visitors since March 1, 2010:     
+was last updated on Sept. 24, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
