--- a/Things ZERO Lab Students Ought to Know.htm
+++ b/Things ZERO Lab Students Ought to Know.htm
@@ -16,9 +16,14 @@
 <p>7. Although you have enormous freedom in ZERO lab, you must not misuse it for stuffs unrelated to your assigned work. Especially, you must not be an intern of a company without the consent of Prof. Lin. If you are not Prof. Lin's official student, violating this rule means that you leave ZERO lab automatically. </p>
 <p>8. Do not give Prof. Lin presents! Prof. Lin only accepts low-value presents from graduated students. </p>
 <p>9.  When submitting papers to conferences or journals, please read the author guideline first. Don't take things for granted. Especially, the author list of a conference paper must be finalized before the deadline of abstract or paper submission.</p>
-<p>10. Some materials for paper/thesis writing: <a href="https://zhouchenlin.github.io/How to Write Good Papers - V2.pdf">How to write good papers</a>; <a href="https://zhouchenlin.github.io/Check%20List%20before%20Handing%20in%20Your%20Paper.htm">Check 
-  List before Handing in Your Paper</a>; <a href="https://zhouchenlin.github.io/How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers.htm">How 
-    to Write Good Responses to Reviews of Journal Papers</a>; <a href="https://zhouchenlin.github.io/How%20to%20Have%20a%20Successful%20Graduate%20Life.pdf">How 
-      to have a successful graduate life?</a>; <a href="Check List before Handing in Your Thesis.html">Check List before Handing in Your Chinese Thesis</a></p>
+<p>10. Some materials for paper/thesis writing: </p>
+<p> a. <a href="How to Write Good Papers - V2.pdf">How to write good papers</a>; </p>
+<p>b.  <a href="Check List before Handing in Your Paper.htm">Check 
+  List before Handing in Your Paper</a>; </p>
+<p>c. <a href="How to Write Good Responses to Reviews of Journal Papers.htm">How 
+  to Write Good Responses to Reviews of Journal Papers</a>; </p>
+<p>d. <a href="How to Have a Successful Graduate Life-v2.pdf">How 
+  to have a successful graduate life?</a></p>
+<p>e. <a href="Check List before Handing in Your Thesis.html">Check List before Handing in Your Chinese Thesis</a>.</p>
 </body>
 </html>
