--- a/Things ZERO Lab Students Ought to Know.htm
+++ b/Things ZERO Lab Students Ought to Know.htm
@@ -16,7 +16,8 @@
 <p>7. Although you have enormous freedom in ZERO lab, you must not misuse it for stuffs unrelated to your assigned work. Especially, you must not be an intern of a company without the consent of Prof. Lin. If you are not Prof. Lin's official student, violating this rule means that you leave ZERO lab automatically. </p>
 <p>8. Do not give Prof. Lin presents! Prof. Lin only accepts low-value presents from graduated students. </p>
 <p>9.  When submitting papers to conferences or journals, please read the author guideline first. Don't take things for granted. Especially, the author list of a conference paper must be finalized before the deadline of abstract or paper submission.</p>
-<p>10. Some materials for paper/thesis writing: </p>
+<p>10. Prof. Lin discourages co-first-authorship. If the to-be co-first-authors do have equal contributions, please tell Prof. Lin.  He will judge it. </p>
+<p>11. Some materials for paper/thesis writing: </p>
 <p> a. <a href="How to Write Good Papers - V2.pdf">How to write good papers</a>; </p>
 <p>b.  <a href="Check List before Handing in Your Paper.htm">Check 
   List before Handing in Your Paper</a>; </p>
