--- a/index.html
+++ b/index.html
@@ -2613,7 +2613,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     </tr>
   <tr align="left">
     <td height="78">
-      <p class="WordSection1">3. I was invited to be area chairs of ICLR 2021, IJCAI 2021 and CVPR 2021!</p></td>
+      <p class="WordSection1">3. I was invited to be area chairs of ICLR 2021, IJCAI 2021 and CVPR 2021! My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award. </p></td>
     </tr>
   <tr align="left">
     <td height="73">
@@ -2881,11 +2881,11 @@ Fang, and <u>Zhouchen Lin</u>, <em>Convergence Rates Analysis of the Quadratic
 Penalty Method and Its Applications to Decentralized Distributed 
 Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">112. Tiancheng Shen, Yibo Yang, <u>Zhouchen Lin</u>, Mingbin Zhang, <em>Recurrent Learning with Clique Structures for Prostate Sparse-view CT Artifacts Reduction</em>, IET Image Processing, accepted. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">112. Tiancheng Shen, Yibo Yang, <u>Zhouchen Lin</u>, Mingbin Zhang, <em>Recurrent Learning with Clique Structures for Prostate Sparse-view CT Artifacts Reduction</em>, IET Image Processing, accepted. [<a href="Publications/2020-IET-ARCliqueNet.pdf">pdf</a>] </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">111. Xinbang Zhang, Jianlong Chang, Yiwen Guo, Gaofeng Meng, <u>Zhouchen Lin</u>, Shiming Xiang, and Chunhong Pan, <em>DATA: Differentiable ArchiTecture Approximation with Distribution Guided Sampling</em>, IEEE Trans. Pattern Analysis and Machine Intelligence, accepted. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">111. Xinbang Zhang, Jianlong Chang, Yiwen Guo, Gaofeng Meng, <u>Zhouchen Lin</u>, Shiming Xiang, and Chunhong Pan, <em>DATA: Differentiable ArchiTecture Approximation with Distribution Guided Sampling</em>, IEEE Trans. Pattern Analysis and Machine Intelligence, accepted. [<a href="Publications/2021-TPAMI-DATA.pdf">pdf</a>] </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">110. Huan Li, Cong Fang, Wotao Yin, and <u>Zhouchen Lin</u>, <em>Decentralized Accelerated Gradient Methods With Increasing Penalty Parameters</em>, submitted to IEEE Transactions on Signal Processing, accepted.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">110. Huan Li, Cong Fang, Wotao Yin, and <u>Zhouchen Lin</u>, <em>Decentralized Accelerated Gradient Methods With Increasing Penalty Parameters</em>, submitted to IEEE Transactions on Signal Processing, accepted. [<a href="Publications/2020-TSP-DAG.pdf">pdf</a>]</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">109. Huan Li, Cong Fang, and <u>Zhouchen Lin</u>, <em>Accelerated First-Order Optimization Algorithms for Machine Learning</em>, Proceedings of the IEEE, accepted. [<a href="Publications/2020-PIEEE-Review.pdf">pdf</a>]</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3475,11 +3475,11 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">113. 5 paper submitted to ICLR 2021.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">113. 10 paper submitted to ICLR 2021.</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">112. 8 paper submitted to AAAI 2021.</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">112. 9 paper submitted to AAAI 2021.</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">111. 17 papers submitted to NeurIPS 2020.</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">111. Yibo Yang, Hongyang Li, Shan You, Fei Wang, Chen Qian, and <u>Zhouchen Lin</u>, <em>ISTA-NAS: Efficient and Consistent Neural Architecture Search by Sparse Coding</em>, NeurIPS 2020. [<a href="Publications/2020-NIPS-ISTA-NAS.pdf">pd</a>f</span></span>]<span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">[<a href="Publications/2020-ICML-Implicit_Euler_Supp.pdf">supplementary material</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">110. Xiangtai Li, Xia Li, Li Zhang, Guangliang Cheng, Jianping Shi, <u>Zhouchen Lin</u>, Shaohua Tan, and Yunhai Tong, <em>Improving Semantic Segmentation via Decoupled Body and Edge Supervision</em>, ECCV 2020. [<a href="Publications/2020-ECCV-Semantic.pdf">pdf</a>] </span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4210,8 +4210,11 @@ granted)</span></p>
 <p>18. (202010244367.3) 基于凸多面体分段线性分类的二叉划分树车牌识别方法[之江]</p>
 <p>19. （202010876709.3） 基于稀疏编码的深度学习网络结构搜索的图像识别方法</p>
 <p>20. （202010960192.6）基于可学习可微分矩阵逆及矩阵分解的图像恢复方法</p>
+<p>21. （202011012138.5）基于偏微分算子的广义等变卷积网络模型的图像分类方法 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
-Activities:   <o:p></o:p> </span></u></b></p>
+Activities:   
+        <o:p></o:p>
+</span></u></b></p>
 <p>1. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
 2018. </p>
 <p><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"></span>2. Fellow of 
@@ -4671,7 +4674,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Sept. 24, 2020. Number of visitors since March 1, 2010:     
+was last updated on Sept. 30, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
