--- a/Things ZERO Lab Students Ought to Know.htm
+++ b/Things ZERO Lab Students Ought to Know.htm
@@ -17,7 +17,8 @@
 <p>8. Do not give Prof. Lin presents! Prof. Lin only accepts low-value presents from graduated students. </p>
 <p>9.  When submitting papers to conferences or journals, please read the author guideline first. Don't take things for granted. Especially, the author list of a conference paper must be finalized before the deadline of abstract or paper submission.</p>
 <p>10. Prof. Lin discourages co-first-authorship. If the to-be co-first-authors do have equal contributions, please tell Prof. Lin.  He will judge it. </p>
-<p>11. Some materials for paper/thesis writing: </p>
+<p>11. When presenting papers, papers with mathematical deductions or proofs are preferred. For application oriented students, math should occupy at least 5% of the pages, and for theoretical oriented ones, math should occupy at leat 30%. </p>
+<p>12. Some materials for paper/thesis writing: </p>
 <p> a. <a href="How to Write Good Papers - V2.pdf">How to write good papers</a>; </p>
 <p>b.  <a href="Check List before Handing in Your Paper.htm">Check 
   List before Handing in Your Paper</a>; </p>
