--- a/index.html
+++ b/index.html
@@ -2974,7 +2974,7 @@ Projective Mismatch Removal for Partial-Duplicate Image Search</em>,  IEEE
 Trans. Image Processing, 28(1): 181-193 (2019). [<a href="https://zhouchenlin.github.io/Publications/2018-TIP-AHCM.pdf">pdf</a>][<a href="https://zhouchenlin.github.io/AHC.zip">code</a>]</span></p>
 <p class="MsoNormal1231172" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231172" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">89. Hao Kong, Xingyu Xie, and <u>Zhouchen 
-Lin</u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">*</span>, <em>t-Schatten- p Norm for Low-Rank Tensor Recovery</em>, IEEE J. 
+Lin</u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">*</span>, <em>t-Schatten-p Norm for Low-Rank Tensor Recovery</em>, IEEE J. 
 Selected Topics in Signal Processing, 12(6): 1405-1419 (2018). [<a href="https://zhouchenlin.github.io/Publications/2018-JSTSP-t-Schatten-p_Norm.pdf">pdf</a>](14MB)</span></p>
 <p class="MsoNormal1231173" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231173" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">88. Chenyan Bai*, 
@@ -4267,7 +4267,7 @@ Shenzhen.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. 
 Reviewers/Chairs to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  IJCAI 2021 (<strong>Area Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
 2020 (<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
 (<strong>Area Chair</strong>), AAAI 2020 (<strong>Area Chair</strong>), NIPS 
