--- a/index.html
+++ b/index.html
@@ -2609,7 +2609,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. Four papers accepted to ICML 2020! One paper accepted to PIEEE! One paper accepted to NeurIPS 2020!</p></td>
+      <p class="WordSection1">2. Two papers accepted to AAAI 2021! </p></td>
     </tr>
   <tr align="left">
     <td height="78">
@@ -3474,9 +3474,11 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">113. 10 paper submitted to ICLR 2021.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">114. 10 papers submitted to ICLR 2021.</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">112. 9 paper submitted to AAAI 2021.</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">113. Yangyang Li, Lin Kong, Fanhua Shang, Yuanyuan Liu, Hongying Liu, and <u>Zhouchen Lin</u>, <em>Learned Extragradient ISTA with Interpretable Residual Structures for Sparse Coding</em>, AAAI 2021. [<a href="Publications/2021-AAAI-ELISTA.pdf">pdf</a>][<a href="Publications/2021-AAAI-ELISTA_supp.pdf">supplementary material</a>]</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">112. Zhengyang Shen, Tiancheng Shen, <u>Zhouchen Lin</u>, and Jinwen Ma, <em>PDO-eS2CNNs: Partial Differential Operator Based Equivariant Spherical CNNs, AAAI 2021</em>. [<a href="Publications/2021-AAAI-PDO-eS2CNN.pdf">pdf</a>][<a href="Publications/2021-AAAI-PDO-eS2CNN_supp.pdf">supplementary material</a>]</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">111. Yibo Yang, Hongyang Li, Shan You, Fei Wang, Chen Qian, and <u>Zhouchen Lin</u>, <em>ISTA-NAS: Efficient and Consistent Neural Architecture Search by Sparse Coding</em>, NeurIPS 2020. [<a href="Publications/2020-NIPS-ISTA-NAS.pdf">pd</a>f</span></span>]<span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">[<a href="Publications/2020-ICML-Implicit_Euler_Supp.pdf">supplementary material</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4175,7 +4177,7 @@ granted)</span></p>
 <p>3. *(ZL201510888480.4) 一种基于形状交互矩阵的图像错误匹配检验方法</p>
 <p>4. *(ZL201710645965.X) 基于维度自适应的Tucker分解的深度网络压缩方法</p>
 <p>5. *(ZL201711007628.4) 基于增广齐次坐标矩阵的图像间错误匹配的检测方法</p>
-<p>6. (201711156691.4) 一种提升邻近算子机神经网络优化方法</p>
+<p>6. *(ZL201711156691.4) 一种神经网络优化的图像识别方法</p>
 <p>7. (201810958553.6) 一种受优化算法启发的深度神经网络结构设计方法</p>
 <p>8. (201811007566.1) 小波域中基于集团结构子带共同学习超分辨率网络的方法</p>
 <p>9. (201811203464.7) 一种求解提升邻近算子机的神经网络优化方法</p>
@@ -4191,6 +4193,7 @@ granted)</span></p>
 <p>19. （202010876709.3） 基于稀疏编码的深度学习网络结构搜索的图像识别方法</p>
 <p>20. （202010960192.6）基于可学习可微分矩阵逆及矩阵分解的图像恢复方法</p>
 <p>21. （202011012138.5）基于偏微分算子的广义等变卷积网络模型的图像分类方法 </p>
+<p>22. （PCT/CN2020/132017）基于偏微分算子的广义等变卷积网络模型的图像分类方法[国际专利]</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   
         <o:p></o:p>
@@ -4243,7 +4246,7 @@ Virtual Reality. </p>
 <p>20.  Technical Advisory Board of Key Lab. of Machine Vision and Pattern 
 Recognition,  Institute of Advanced Technology, Chinese Academy of Sciences, 
 Shenzhen.</p>
-<p>21. Technical Advisory Board of Guangdong Lab. of Artificial Intelligence and Digital Economy (Pazhou Lab.).</p>
+<p>21. Senior Consultant of Guangdong Lab. of Artificial Intelligence and Digital Economy (Pazhou Lab.).</p>
 <p>22. Technical Advisory Board of AI School, Nanjing University of Aeronautics and Astronautics.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">23. Reviewer 
   to Journals:    
@@ -4654,7 +4657,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Oct. 22, 2020. Number of visitors since March 1, 2010:     
+was last updated on Dec. 2, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
