--- a/index.html
+++ b/index.html
@@ -4180,7 +4180,7 @@ granted)</span></p>
 <p>5. *(ZL201711007628.4) 基于增广齐次坐标矩阵的图像间错误匹配的检测方法</p>
 <p>6. *(ZL201711156691.4) 一种神经网络优化的图像识别方法</p>
 <p>7. (201810958553.6) 一种受优化算法启发的深度神经网络结构设计方法</p>
-<p>8. (201811007566.1) 小波域中基于集团结构子带共同学习超分辨率网络的方法</p>
+<p>8. *(ZL201811007566.1) 小波域中基于集团结构子带共同学习超分辨率网络的方法</p>
 <p>9. (201811203464.7) 一种求解提升邻近算子机的神经网络优化方法</p>
 <p>10. (202010130876.3) 一种基于牛顿共轭梯度法的深度学习网络架构[之江]</p>
 <p>11. (202010108770.3) 一种空间金字塔图卷积网络实现方法[之江]</p>
@@ -4658,7 +4658,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Dec. 22, 2020. Number of visitors since March 1, 2010:     
+was last updated on Dec. 27, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
