--- a/index.html
+++ b/index.html
@@ -2994,12 +2994,7 @@ Bouwmans*, Sajid Javed, Hongyang Zhang, <u>Zhouchen Lin</u>, and Ricardo Otazo,
 Proceedings of the IEEE, 106(8): 1427-1457 (2018). [<a href="https://zhouchenlin.github.io/Publications/2018-PIEEE-RPCA.pdf">pdf</a>] 
 </span></p>
 <p class="MsoNormal12311711" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal12311711" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">85. Canyi Lu, Huan 
-Li,<span class="MsoNormal12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"> 
-and</span> <span class="MsoNormal12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen 
-Lin</u>,</span><em> Optimized Projections for Compressed Sensing via Direct Mutual 
-Coherence Minimization</em>, Signal Processing<span class="STYLE2">, <span class="STYLE12">151: 45-55 (2018). [<a href="https://zhouchenlin.github.io/Publications/2018-SP-DMCM.pdf">pdf</a>]</span></span> 
-</p>
+<p class="MsoNormal12311711" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">85. Canyi Lu, Huan Li, and <u>Zhouchen Lin</u>, <em>Optimized Projection for Compressed Sensing via Direct Mutual Coherence Minimization</em>, Signal Processing, 151:44-55 (2018). [<a href="Publications/2018-SP-DMCM.pdf">pdf</a>]</span></p>
 <p class="MsoNormal1281" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1281" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">84. Xiang Zhang, 
 Jiarui Sun, Siwei Ma*, <u>Zhouchen Lin</u>, Jian Zhang, Shiqi Wang, and Wen Gao, 
