--- a/index.html
+++ b/index.html
@@ -2827,7 +2827,8 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
-<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">131. Huan Li, <u>Zhouchen Lin</u>, and Yongchun Fang,  <em>Optimal Accelerated Variance Reduced EXTRA and DIGing for Strongly Convex and  Smooth Decentralized Optimization</em>, submitted to J. Machine Learning Research.</p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">132. Xiangtai Li, Xia Li, Ansheng You, Li Zhang, Guangliang Cheng, Kuiyuan Yang, Yunhai Tong, <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">and <u>Zhouchen Lin</u></span>, <em>Towards Efficient Scene Understanding via Squeeze Reasoning</em>, submitted to IEEE Trans. Image Processing.</p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">131. Huan Li, <u>Zhouchen Lin</u>, and Yongchun Fang, <em>Optimal Accelerated Variance Reduced EXTRA and DIGing for Strongly Convex and  Smooth Decentralized Optimization</em>, submitted to J. Machine Learning Research.</p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">130. Hanyuan Hang, Tao Huang, Biao Li, and <u>Zhouchen Lin</u>, <em>Histogram Transform Ensembles for Density-based Unsupervised Learning</em>, submitted to J. Machine Learning Research.</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">129. Pan Zhou, Xiaotong Yuan, <u>Zhouchen Lin</u>, and Steven Hoi, <em>A Hybrid Stochastic-Deterministic Minibatch Proximal Gradient Method for Efficient Optimization and Generalization</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -2920,7 +2921,7 @@ Machines</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&qu
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">101. 熊红凯、戴文睿、林宙辰、吴飞、于俊清、申扬眉、徐明星，多媒体信号处理的数学理论前沿进展（in Chinese），中国图象图形学报，25(1):1-18, 2020. [<a href="Publications/2019-JIG-MM.pdf">pdf</a>]</span></p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231178" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">100. Yinwei Wei, Xiang Wang, Liqiang Nie*, <u>Zhouchen Lin</u>, and Baoquan Chen, <em></em>Neural Multimodal Cooperative 
-  Learning Towards Micro-video Understanding, IEEE Trans. <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> Image Processing, 29: 1-14 (2020). [<a href="https://zhouchenlin.github.io/Publications/2019-TIP-NMCL.pdf">pdf</a>][<a href="https://nicemodel.wixsite.com/nice">code and data</a>]</span></span></p>
+  Learning Towards Micro-video Understanding, IEEE Trans. <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> Image Processing, 29: 1-14 (2020). [<a href="https://zhouchenlin.github.io/Publications/2019-TIP-NMCL.pdf">pdf</a>][<a href="https://nicemodel.wixsite.com/nice">code and data</a>]</span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">(ESI Highly cited paper)</span></p>
 <p class="MsoNormal1231178" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231177" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">99. 
   Huan Li and <u>Zhouchen Lin</u>, <em>Provable Accelerated Gradient Method for 
@@ -4654,7 +4655,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Dec. 27, 2020. Number of visitors since March 1, 2010:     
+was last updated on Jan. 4, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
