--- a/index.html
+++ b/index.html
@@ -2613,7 +2613,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     </tr>
   <tr align="left">
     <td height="78">
-      <p class="WordSection1">3. I was invited to be area chairs of ICLR 2021, IJCAI 2021 and CVPR 2021! My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award. </p></td>
+      <p class="WordSection1">3. I was invited to be Program co-Chair of ICPR 2022! My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award. </p></td>
     </tr>
   <tr align="left">
     <td height="73">
@@ -4268,7 +4268,8 @@ Shenzhen.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. 
 Reviewers/Chairs to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICPR 2022  
+(<strong>Program Co-Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
 2020 (<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
 (<strong>Area Chair</strong>), AAAI 2020 (<strong>Area Chair</strong>), NIPS 
@@ -4655,7 +4656,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Jan. 4, 2021. Number of visitors since March 1, 2010:     
+was last updated on Jan. 9, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
